deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ashi
  namespace: ashi
spec:
  selector:
    app: ashi
  ports:
    - port: 3000
      targetPort: 3000
